# FBAE

./: #CMakeLists.txt#  .gitignore  CMakeLists.txt  CMakeLists_cereal.txt.in  CMakeLists_log4cxx.txt.in  CMakeLists_yoctolib_cpp.txt.in  LICENSE  README.md  test.sh
.run/: Trains (local Trains).run.xml  fbae  (BBOBB0-3).run.xml  fbae (BBOBB0-8).run.xml  fbae (BBOBB1-3).run.xml  fbae (BBOBB1-4).run.xml  fbae (BBOBB1-8).run.xml  fbae (BBOBB2-3).run.xml  fbae (BBOBB2-4).run.xml  fbae (BBOBB2-8).run.xml  fbae (BBOBB3-4) .run.xml  fbae (BBOBB3-8).run.xml  fbae (BBOBB4).run.xml  fbae (BBOBB4-8).run.xml  fbae (BBOBB5-8).run.xml  fbae (BBOBB6-8).run.xml  fbae (BBOBB7-8).run.xml  fbae (local BBOBB-3).run.xml  fbae (local LCR).run.xml
SerializationOverhead/: CMakeLists.txt  mainSerializationOverhead.cpp
Sources/: AlgoLayer.h  Arguments.cpp  BBOBBAlgoLayer.cpp  BBOBBAlgoLayer.h  BBOBBAlgoLayerMsg.h  CMakeLists.txt  EnetCommLayer.cpp  Param.cpp  Param.h  SequencerAlgoLayer.cpp  SequencerAlgoLayer.h  TcpCommLayer.cpp  main.cpp  msgTemplates.h
Sources/AlgoLayer/: AlgoLayer.cpp  AlgoLayer.h
Sources/AlgoLayer/BBOBB/: BBOBB.cpp  BBOBB.h  BBOBBMsg.h
Sources/AlgoLayer/BBOBBAlgoLayer/: BBOBBAlgoLayer.cpp  BBOBBAlgoLayer.h  BBOBBAlgoLayerMsg.h
Sources/AlgoLayer/Sequencer/: Sequencer.cpp  Sequencer.h  SequencerMsg.h
Sources/AlgoLayer/SequencerAlgoLayer/: SequencerAlgoLayer.cpp  SequencerAlgoLayer.h  SequencerAlgoLayerMsg.h
Sources/CommLayer/: CommLayer.cpp  CommLayer.h
Sources/CommLayer/Tcp/: Tcp.cpp  Tcp.h
Sources/CommLayer/TcpCommLayer/: TcpCommLayer.cpp  TcpCommLayer.h
Sources/SessionLayer/: SessionLayer.cpp  SessionLayer.h  SessionLayerMsg.h
Sources/SessionLayer/PerfMeasures/: Measures.cpp  PerfMeasures.cpp  PerfMeasures.h
Sources/SessionLayer/Session/: Session.cpp  Session.h
boost_subset/: README.md
doc/: Energy_Consumption_Measures.md  classDiagram.pu  designDocument.md  mscCommLayerTest.pu  mscForSequencerInstances.pu  mscSequencer.pu
doc/Power_mesures_test/Test_LIKWID/: CMakeLists.txt  main.cpp
doc/Power_mesures_test/Test_POWERAPI/: CMakeLists.txt  main.cpp
doc/Power_mesures_test/Test_POWERAPI/res/: sensor_MongoDB_config_file.json  sensor_csv_config_file.json  smartwatts_MongoDB_config_file.json  smartwatts_csv_config_file.json
doc/Power_mesures_test/Test_SCAPHANDRE/: CMakeLists.txt  main.cpp  save_results.json
res/: fbae_logger.properties
src/: Arguments.cpp  Arguments.h  CMakeLists.txt  adaptCereal.h  basicTypes.h  main.cpp  msgTemplates.h
src/AlgoLayer/: AlgoLayer.cpp  AlgoLayer.h  AlgoLayerMsg.h
src/AlgoLayer/BBOBB/: BBOBB.cpp  BBOBB.h  BBOBBMsg.h
src/AlgoLayer/Sequencer/: Sequencer.cpp  Sequencer.h  SequencerMsg.h
src/CommLayer/: CommLayer.h
src/CommLayer/Tcp/: Tcp.cpp  Tcp.h
src/SessionLayer/: SessionLayer.cpp  SessionLayer.h  SessionLayerMsg.h
src/SessionLayer/PerfMeasures/: PerfMeasures.cpp  PerfMeasures.h  get_cpu_time.cpp
src/core/: Arguments.cpp  Arguments.h  CMakeLists.txt  OptParserExtended.cpp  OptParserExtended.h  adaptCereal.h  basicTypes.h  msgTemplates.h  options.cpp  options.h
src/core/AlgoLayer/: AlgoLayer.cpp  AlgoLayer.h  AlgoLayerMsg.h  AlgoStub.cpp  AlgoStub.h  InitDoneSupervisor.cpp
src/core/AlgoLayer/BBOBB/: BBOBB.cpp  BBOBB.h  BBOBBMsg.h
src/core/AlgoLayer/FBAE_MPI/: FBAE_MPI.cpp  FBAE_MPI.h  tmp.cpp
src/core/AlgoLayer/FMPI/: FMPI.cpp  FMPI.h  MPIManager.h
src/core/AlgoLayer/LCR/: LCR.cpp  LCR.h  LCRMessage.h  LCRTypedefs.h
src/core/AlgoLayer/Sequencer/: Sequencer.cpp  Sequencer.h  SequencerMsg.h
src/core/AlgoLayer/Trains/: Trains.cpp  Trains.h
src/core/CommLayer/: CommLayer.cpp  CommLayer.h  CommStub.cpp  CommStub.h
src/core/CommLayer/Tcp/: Tcp.cpp  Tcp.h
src/core/Logger/: LoggerConfig.cpp  LoggerConfig.h
src/core/SessionLayer/: SessionLayer.cpp  SessionLayer.h  SessionLayerMsg.cpp  SessionLayerMsg.h  SessionStub.cpp  SessionStub.h
src/core/SessionLayer/PerfMeasures/: Measures.cpp  Measures.h  PerfMeasures.cpp  PerfMeasures.h  get_cpu_time.cpp  get_cpu_time.h
src/lib/: Arguments.cpp  Arguments.h  CMakeLists.txt  OptParserExtended.cpp  OptParserExtended.h  adaptCereal.h  basicTypes.h  msgTemplates.h  options.h
src/lib/AlgoLayer/: AlgoLayer.cpp  AlgoLayer.h  AlgoLayerMsg.h
src/lib/AlgoLayer/BBOBB/: BBOBB.cpp  BBOBB.h
src/lib/AlgoLayer/LCR/: LCR.cpp  LCR.h  LCRMessage.h  LCRTypedefs.h
src/lib/AlgoLayer/Sequencer/: Sequencer.cpp  SequencerMsg.h
src/lib/AlgoLayer/Trains/: Trains.cpp  Trains.h  TrainsMessage.h  testTrains.cpp
src/lib/CommLayer/: CommLayer.cpp  CommLayer.h
src/lib/CommLayer/Tcp/: Tcp.cpp  Tcp.h  TcpCommLayer.cpp  TcpCommLayer.h
src/lib/Logger/: BasicLogger.cpp  BasicLogger.h  Logger.cpp  Logger.h  LoggerConfig.cpp  LoggerConfig.h  StreamLogger.cpp  StreamLogger.h
src/lib/SessionLayer/: SessionLayer.cpp  SessionLayer.h  SessionLayerMsg.cpp  SessionLayerMsg.h
src/lib/SessionLayer/PerfMeasures/: Measures.cpp  Measures.h  PerfMeasures.cpp  PerfMeasures.h  get_cpu_time.cpp  get_cpu_time.h
src/main/: CMakeLists.txt  main.cpp
src/test/: ArgumentsTest.cpp  CMakeLists.txt  SerializationOverheadTest.cpp
src/test/AlgoLayer/: BBOBBTest.cpp  FMPITest.cpp  InitDoneSupervisor.h  LCRTest.cpp  SequencerTest.cpp  TrainsTest.cpp
src/test/CommLayer/: CommStub.h  TcpTest.cpp
src/test/SessionLayer/: SessionStub.cpp
test/AlgoLayer/: InitDoneSupervisor.cpp  LCRTest.cpp
tests/: ArgumentsTest.cpp  CMakeLists.txt  SerializationOverheadTest.cpp  mainSerializationOverhead.cpp  testSerializationOverhead.cpp
tests/AlgoLayer/: AlgoStub.cpp  AlgoStub.h  BBOBBTest.cpp  InitDoneSupervisor.cpp  InitDoneSupervisor.h  LCRTest.cpp  SequencerTest.cpp  TrainsTest.cpp  testBBOBB.cpp  testLCR.cpp  testSequencer.cpp
tests/CommLayer/: CommStub.cpp  CommStub.h  TcpTest.cpp
tests/SessionLayer/: SessionStub.cpp  SessionStub.h
